--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "devDependencies": {
     "sass": "^1.56.1",
     "vite": "^3.2.3",
-    "vite-plugin-html-purgecss": "^0.1.1"
+    "vite-plugin-purgecss": "^0.2.12"
   }
 }
